# vef2-2025-e

./: Cargo.toml  README.md  REPORT.md  index.html  index.js  integration_plan.md  package-lock.json  package.json  topics.html  topics.md
.cargo/: config.toml
src/: camera.rs  color.rs  interval.rs  lib.rs  material.rs  object_list.rs  ray.rs  rng.rs  scene_object.rs  shared_mem.rs  sphere.rs  vector3.rs  vector_utils.rs
tests/: vector3.rs  vector_utils.rs  wasm.rs
