[package]
name = "vef2-2025-e"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
run_main = []

[dependencies]
rayon = "1.10.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-rayon = "1.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
approx = "0.5.1"
