[package]
name = "vef2-2025-e"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
debug = true
wasm-opt = false

[features]
run_main = []

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-rayon = "1.3.0"
